fixed card alignment as they scale up

--- a/src/main.css
+++ b/src/main.css
@@ -93,6 +93,7 @@ body {
   display: flex;
   justify-content: center;
   justify-items: center;
+  align-items: flex-end;
   gap: 5%;
   list-style: none;
   flex: 1;
